samples/_failures_safe/1761377527_4f3ab3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f99fa50.c: In function ‘main’:
./samples/SAFE/__tmp_0f99fa50.c:141:5: error: expected declaration or statement at end of input
  141 |     for (size_t i = 0; i < a.rows; i++) {
      |     ^~~
./samples/SAFE/__tmp_0f99fa50.c:141:5: error: expected declaration or statement at end of input
